# quackpack

./: .gitignore  CHANGELOG.md  MANIFEST.in  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: README.md  cast2svg.py  demo.sh  demo.tape  quackpack.cast
examples/: README.md  big-orders.sql  mcp_shim.py  pack.yaml  product-mix.sql  sales.csv  top-regions.sql
quackpack/: __init__.py  cli.py  engine.py  glob.py  history.py  iox.py  lints.py  manifest.py  params.py  pipes.py  render.py  schedule.py  snapshots.py  store.py  templating.py
tests/: __init__.py  test_cli.py  test_cli_explain.py  test_cli_glob.py  test_cli_help.py  test_cli_iox.py  test_cli_last.py  test_cli_m2.py  test_cli_m3.py  test_cli_m4.py  test_cli_m5.py  test_cli_pipe.py  test_cli_presets.py  test_cli_schedule.py  test_cli_snapshots.py  test_cli_templating.py  test_demo.py  test_engine.py  test_examples.py  test_history.py  test_iox.py  test_lints.py  test_manifest.py  test_params.py  test_pipes.py  test_release.py  test_render.py  test_snapshots.py  test_store.py  test_templating.py
