[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quackpack"
version = "0.1.0"
description = "A personal pantry for your SQL — stash, tag, parameterize, and rerun your DuckDB/SQLite queries."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["duckdb", "sql", "cli", "queries", "snippets", "sqlite"]
authors = [{ name = "rwrife" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "duckdb>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/rwrife/quackpack"
Repository = "https://github.com/rwrife/quackpack"
Issues = "https://github.com/rwrife/quackpack/issues"

[project.scripts]
quackpack = "quackpack.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["quackpack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
